# qoder-autopilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: architecture.md
examples/: basic_usage.py  parallel_mode.py
scripts/: sync-worker.sh
src/qoder_autopilot/: __init__.py  __main__.py  cli.py  config.py  credentials.py  deploy.py  doctor.py  errors.py  first_run.py  logger.py  ninerouter.py  oauth.py  otp.py  register.py  relay.py  temp_mail.py  user_config.py
src/qoder_autopilot/auth/: credentials.py  identity.py  oauth.py  otp.py
src/qoder_autopilot/browser/: __init__.py  camoufox.py  window_tiler.py
src/qoder_autopilot/captcha/: __init__.py  ai_vision.py  manual.py  opencv_detect.py  slider.py  solver.py
src/qoder_autopilot/infra/: config.py  ninerouter.py  temp_mail.py  user_config.py
src/qoder_autopilot/setup/: deploy.py  doctor.py  first_run.py
src/qoder_autopilot/utils/: logger.py
src/qoder_autopilot/worker_template/: package.json  schema.sql  wrangler.toml.example
src/qoder_autopilot/worker_template/scripts/: setup.sh
src/qoder_autopilot/worker_template/src/: config.js  index.js  utils.js
src/qoder_autopilot/worker_template/src/handlers/: api.js  email.js
tests/: conftest.py  test_config.py  test_errors.py  test_identity.py  test_oauth.py  test_otp.py  test_relay.py
