# ═══════════════════════════════════════════════════
# Qoder Autopilot — Package Configuration
# ═══════════════════════════════════════════════════

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project Metadata ──────────────────────────────
[project]
name = "qoder-autopilot"
version = "0.2.1"
description = "Automated Qoder account registration with anti-detect browser, captcha solving (AI + OpenCV), and 9Router OAuth integration."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["qoder", "automation", "camoufox", "captcha", "oauth", "9router"]
authors = [
    { name = "Daivageralda" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]

# ── Core Dependencies ─────────────────────────────
dependencies = [
    "camoufox[geoip]>=0.4",
    "playwright>=1.40",
    "requests>=2.28",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "faker>=20.0",
]

# ── Optional Dependencies ─────────────────────────
[project.optional-dependencies]
# AI-powered captcha solving (Gemini/OpenAI vision)
captcha = [
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "openai>=1.0",
]
# Install everything
all = [
    "qoder-autopilot[captcha]",
]
# Development dependencies
dev = [
    "qoder-autopilot[all]",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

# ── CLI Entry Point ───────────────────────────────
[project.scripts]
qoder-autopilot = "qoder_autopilot.cli:main"

# ── URLs ──────────────────────────────────────────
[project.urls]
Homepage = "https://github.com/Daivageralda/qoder-autopilot"
Repository = "https://github.com/Daivageralda/qoder-autopilot"
Issues = "https://github.com/Daivageralda/qoder-autopilot/issues"

# ── Hatch Build Config ────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/qoder_autopilot"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "examples/",
    "docs/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# ── Ruff (Linter/Formatter) ───────────────────────
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM105", # use contextlib.suppress
]

[tool.ruff.lint.isort]
known-first-party = ["qoder_autopilot"]

# ── Pytest ────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require external services",
]

# ── MyPy ──────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
